feat: add creative brief agent